test/spec_vectors/i32/fail/module_11.wat
(module (func $type-unary-operand-empty-in-call (call 1 (i32.eqz)) (drop)) (func (param i32) (result i32) (local.get 0)))